--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@popperjs/core": "^2.9.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
+    "vee-validate": "^4.2.2",
     "vue": "^3.0.0",
+    "vue-axios": "^3.2.4",
     "vue-router": "^4.0.5",
     "vuex": "^4.0.0-0"
   },
